objects/KmArticleType__c.object
<CustomObject>
    <description>To control Knowledge Article types covered by the article archival, print and link validation process</description>
    <fields>
        <fullName>ArticleTypeApiName__c</fullName>
        <label>Article Type API Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ArticleTypeLabel__c</fullName>
        <label>Article Type Label</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is Active</label>
        <type>Checkbox</type>
    </fields>
    <label>Km Article Type</label>
    <listViews>
        <fullName>Active_Ka_Types</fullName>
        <columns>NAME</columns>
        <columns>ArticleTypeLabel__c</columns>
        <columns>ArticleTypeApiName__c</columns>
        <columns>isActive__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>isActive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Ka Types</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ArticleTypeLabel__c</columns>
        <columns>ArticleTypeApiName__c</columns>
        <columns>isActive__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>kat-{00000000}</displayFormat>
        <label>Km Article Type Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Km Article Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>